<resources>
    <string name="app_name">Krok</string>

    <string name="home_menu_label">Home</string>
    <string name="favorite_menu_label">Favorite</string>
    <string name="profile_menu_label">Profile</string>

    <string-array name="categoriesList">
        <item>Medicine</item>
        <item>Stomatology</item>
        <item>Pharmacy</item>
    </string-array>
    <string name="choose_specialization">Please choose your specialization</string>
    <string name="choose_exam">Please choose your exam</string>
    <string name="choose_exam_language">Please choose your exam language</string>
    <string name="ukrainian_lang">Ukrainian</string>
    <string name="russian_lang">Russian</string>
    <string name="english_lang">English</string>
    <string name="confirm">Confirm</string>
    <string name="medicine">Medicine</string>
    <string name="stomatology">Stomatology</string>
    <string name="pharmacy">Pharmacy</string>
    <string name="krok_1">Krok 1</string>
    <string name="krok_2">Krok 2</string>

    <string name="need_select_specialization">Please, select your specialization</string>
    <string name="need_select_exam">Please, select exam</string>
    <string name="need_select_exam_language">Please, select exam language</string>

    <string name="exam_label">Krok %d %s</string>

    <string name="test_type_booklets_title">Booklets</string>
    <string name="test_type_bases_title">Bases</string>
    <string name="test_type_difficult_questions_title">Difficult Questions</string>
    <string name="test_type_unfinished_tests_title">Unfinished Tests</string>

    <string name="test_type_booklets_description">It includes tests of past years.</string>
    <string name="test_type_bases_description">It includes bases of past years.</string>
    <string name="test_type_difficult_questions_description">Difficult questions for you.</string>
    <string name="test_type_unfinished_tests_description">Your unfinished tests.</string>


    <string name="booklet_title">Booklet %d</string>
    <string name="booklet_questions">%d questions</string>
    <string name="sub_booklet_title">Eng SubBooklet</string>


    <string name="network_error">Network Error</string>
    <string name="retry_button_text">Retry</string>
</resources>