<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_grey">

    <ImageView
        android:layout_width="@dimen/krok_image_size"
        android:layout_height="@dimen/krok_image_size"
        android:layout_marginTop="@dimen/default_margin"
        android:layout_marginBottom="@dimen/default_margin"
        android:src="@drawable/krok_icon"
        app:layout_constraintBottom_toTopOf="@id/choose_specialization_label"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/choose_specialization_label"
        style="@style/label_style"
        android:layout_marginBottom="@dimen/default_small_margin"
        android:text="@string/choose_specialization"
        app:layout_constraintBottom_toTopOf="@id/specializations"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.button.MaterialButtonToggleGroup
        android:id="@+id/specializations"
        style="@style/button_group_style"
        app:layout_constraintBottom_toTopOf="@id/choose_exam_label"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:selectionRequired="true"
        app:singleSelection="true">

        <Button
            android:id="@+id/medicine_specialization_button"
            style="@style/button_style"
            android:text="@string/medicine" />

        <Button
            android:id="@+id/stomatology_specialization_button"
            style="@style/button_style"
            android:text="@string/stomatology" />

        <Button
            android:id="@+id/pharmacy_specialization_button"
            style="@style/button_style"
            android:text="@string/pharmacy" />
    </com.google.android.material.button.MaterialButtonToggleGroup>

    <TextView
        android:id="@+id/choose_exam_label"
        style="@style/label_style"
        android:layout_marginBottom="@dimen/default_small_margin"
        android:text="@string/choose_exam"
        app:layout_constraintBottom_toTopOf="@id/exams"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.button.MaterialButtonToggleGroup
        android:id="@+id/exams"
        style="@style/button_group_style"
        app:layout_constraintBottom_toTopOf="@id/choose_exam_language"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:selectionRequired="true"
        app:singleSelection="true">

        <Button
            android:id="@+id/krok_1_button"
            style="@style/button_style"
            android:text="@string/krok_1" />

        <Button
            android:id="@+id/krok_2_button"
            style="@style/button_style"
            android:text="@string/krok_2" />

    </com.google.android.material.button.MaterialButtonToggleGroup>

    <TextView
        android:id="@+id/choose_exam_language"
        style="@style/label_style"
        android:layout_marginBottom="@dimen/default_small_margin"
        android:text="@string/choose_exam_language"
        app:layout_constraintBottom_toTopOf="@id/examLanguages"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.button.MaterialButtonToggleGroup
        android:id="@+id/examLanguages"
        style="@style/button_group_style"
        app:layout_constraintBottom_toTopOf="@id/confirm_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:selectionRequired="true"
        app:singleSelection="true">

        <Button
            android:id="@+id/ukrainian_language_button"
            style="@style/button_style"
            android:text="@string/ukrainian_lang" />

        <Button
            android:id="@+id/russian_language_button"
            style="@style/button_style"
            android:text="@string/russian_lang" />

        <Button
            android:id="@+id/english_language_button"
            style="@style/button_style"
            android:text="@string/english_lang" />

    </com.google.android.material.button.MaterialButtonToggleGroup>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/confirm_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/confirm_button_margin"
        android:layout_marginBottom="@dimen/default_margin"
        android:text="@string/confirm"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>